--- a/cats_lab.ipynb
+++ b/cats_lab.ipynb
@@ -5,8 +5,10 @@
    "metadata": {},
    "source": [
     "# Logistic Regression: cat or dog?\n",
-    "In this lab you will teach a computer to distinguish between images of cats and dogs using Logistic Regression. \n",
-    "The input dataset consists of 10,000 images manually labeled as ''cats'' and ''dogs''. The original dataset was downloaded from kaggle. Download the entire [folder](https://drive.google.com/file/d/1V4pAtGy7VOJQlxM3g8gyDee8h5k7VTSF/view?usp=sharing)  with images and unzip it into your local directory containing input files for this course. Then set the path below to point to this directory."
+    "In this lab you will teach computer to distinguish between images of cats and dogs using Logistic Regression. \n",
+    "The input dataset consists of 10,000 images manually labeled as ''cats'' and ''dogs''. The original dataset was downloaded from kaggle. \n",
+    "\n",
+    "Download the entire [folder](https://drive.google.com/file/d/1V4pAtGy7VOJQlxM3g8gyDee8h5k7VTSF/view?usp=sharing)  with images and unzip it into your local directory containing input files for this course. Then set the path below to point to this directory."
    ]
   },
   {
@@ -15,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../../data_ml_2020/cat_dog_data\""
+    "data_dir = \"../../../data_ml_2020/cat_dog_data\""
    ]
   },
   {
@@ -30,7 +32,7 @@
    "metadata": {},
    "source": [
     "### 1.1. Import all the required libraries. \n",
-    "If you get an import error on `keras`, run the next cell to Install `keras` in the current Jupyter kernel, and then rerun the import cell. "
+    "If you get an import error on `keras`, run one of the next 2 cells to Install `keras` in the current Jupyter kernel, and then rerun the import cell. "
    ]
   },
   {
@@ -52,12 +54,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Install a conda package (with all its dependencies) in the current Jupyter kernel\n",
+    "# this will work if you have a clean installation of anaconda\n",
+    "import sys\n",
+    "!conda install --yes --prefix {sys.prefix} keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install a conda package in the current Jupyter kernel \n",
+    "# Alternatively - install keras package and its dependencies using pip\n",
     "import sys\n",
-    "!conda install --yes --prefix {sys.prefix} keras"
+    "!pip install --upgrade tensorflow\n",
+    "!pip install --upgrade keras"
    ]
   },
   {
@@ -84,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next add the path to each image to the corresponding list:"
+    "Next create two lists and fill them with the paths to the corresponding images. "
    ]
   },
   {
@@ -113,7 +130,7 @@
    "metadata": {},
    "source": [
     "Now we have the paths to each image in the training set.\n",
-    "We need to convert each image into numpy array. For this we use the preprocessing module in the `keras` library. Let's see how this works."
+    "We need to convert each image into a numpy array. For this we use the preprocessing module in the `keras` library. "
    ]
   },
   {
@@ -122,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = 343\n",
+    "k = 200\n",
     "sample_dog_file = train_dogs_files[k]\n",
     "img = preprocessing.image.load_img(sample_dog_file, target_size=(64, 64))\n",
     "img_array = preprocessing.image.img_to_array(img)"
@@ -168,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# image dimensions\n",
+    "# image dimensions: using 32x32 pixels just for speed\n",
     "d = 32\n",
     "X_train_orig = np.zeros((8000, d, d, 3), dtype='float32')\n",
     "for i in range(4000):    \n",
@@ -189,8 +206,9 @@
    "metadata": {},
    "source": [
     "### 1.4. Flatten 3D image arrays\n",
-    "Our model requires each object to be a 1D array of feature values -\n",
-    "we need to flatten our 3D image array.\n",
+    "Our model requires each object to be a 1D vector of features -\n",
+    "we need to flatten our 3D image arrays.\n",
+    "\n",
     "After reshaping we will have,\n",
     "$d*d*3$ features as a single array for each picture in the training set (8000 pics),"
    ]
@@ -210,8 +228,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5. Adding class labels\n",
-    "Now we need to create the corresponding label arrays."
+    "### 1.5. Create class labels\n",
+    "Now we need to create the corresponding class label vectors. We will mark the cats as class 1, and the dogs as class 0 (not cats)."
    ]
   },
   {
@@ -252,9 +270,23 @@
     "from sklearn import linear_model\n",
     "\n",
     "algorithms = ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga'] # default='lbfgs'\n",
-    "logreg = linear_model.LogisticRegression(solver=algorithms[1], random_state = 42, max_iter= 100)\n",
-    "logreg.fit (X_train, Y_train)\n",
-    "\n",
+    "logreg = linear_model.LogisticRegression(solver=algorithms[1], random_state = 42, max_iter= 1000)\n",
+    "logreg.fit (X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score of the logistic regression classifier is simply a percentage of correctly predicted data points. This measure is called the **accuracy** of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "acc_train = logreg.score(X_train, Y_train)\n",
     "print(\"train accuracy: {} \".format(acc_train))"
    ]
@@ -263,8 +295,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Model evaluation\n",
-    "Now we need to see how the algorithm performs on test data. To create a test set, repeat steps 1.2-1.5 for the test_set folder."
+    "## 2. Model evaluation \\[Your turn\\]\n",
+    "Obviously, we are much more interested to see how our model performs on the test data. To create a test set, repeat steps 1.2-1.5 for the test_set folder."
    ]
   },
   {
@@ -282,11 +314,11 @@
    "source": [
     "test_cats_files = []\n",
     "test_path_cats = data_dir +\"/test_set/cats/\"\n",
-    "<Your code here>\n",
+    "# <Your code here>\n",
     "\n",
     "test_dogs_files = []\n",
     "test_path_dogs = data_dir +\"/test_set/dogs/\"\n",
-    "<Your code here>\n",
+    "# <Your code here>\n",
     "\n",
     "len(test_cats_files), len(test_dogs_files)"
    ]
@@ -305,7 +337,7 @@
    "outputs": [],
    "source": [
     "X_test_orig = np.zeros((2000, d, d, 3), dtype='float32')  \n",
-    "<Your code here>\n",
+    "# <Your code here>\n",
     "X_test_orig.shape"
    ]
   },
@@ -322,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test <Your code here>\n",
+    "X_test # <Your code here>\n",
     "print(X_test[0])\n",
     "X_test.shape"
    ]
@@ -340,8 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_test \n",
-    "<Your code here>\n",
+    "Y_test #<Your code here>\n",
     "Y_test.shape"
    ]
   },
@@ -368,6 +399,9 @@
    "source": [
     "### 2.6. Improve the model\n",
     "If the predictive power of the classifier is too low, try to improve the model. Below are some suggestions for improving it. Rerun the model after each modification and see if the accuracy of prediction is improved. \n",
+    "\n",
+    "Carefully record the results of your experiments in a separate markdown cell.\n",
+    "\n",
     "<ol>\n",
     "    <li>Increase value of $d$ (image dimensions) to 64.</li>\n",
     "    <li>Normalize values in pixel arrays by dividing each value by 255 (max RGB value).</li>\n",
@@ -376,7 +410,7 @@
     "    <li>$\\ldots$</li>\n",
     "</ol>\n",
     "\n",
-    "You can stop once you have the accuracy above 0.60."
+    "You can stop once you have a good accuracy for the test set (no less than 0.60)."
    ]
   },
   {
@@ -395,6 +429,13 @@
    "source": [
     "# X_new = [[...], [...]]\n",
     "Y_new = model.predict(X_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Submit your images with your lab, and specify which prediction did you obtain for each image."
    ]
   },
   {
@@ -432,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
