--- a/cats_lab.ipynb
+++ b/cats_lab.ipynb
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Model evaluation \\[Your turn\\]\n",
+    "## 2. Lab Task 1: Model evaluation  \\[60%\\]\n",
     "Obviously, we are much more interested to see how our model performs on the test data. To create a test set, repeat steps 1.2-1.5 for the test_set folder."
    ]
   },
@@ -447,6 +447,42 @@
     "https://machinelearningmastery.com/save-load-machine-learning-models-python-scikit-learn/).\n",
     "\n",
     "Test that you can save the model and then load it in the cell below. Put your saved model to your google drive folder and provide the link to it in your notebook submission."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Lab Task 2: Support Vector Machines \\[40%\\]\n",
+    "First, watch the [video](https://www.youtube.com/watch?v=efR1C6CvhmE&vl=en) about another classifier: Support Vector Machine (SVM).\n",
+    "\n",
+    "Next, perform the cat/dog image classification learning using SVM.\n",
+    "Learn about the parameters of the sklearn SVC class [here](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC # \"Support vector classifier\"\n",
+    "svm = SVC(kernel='rbf', C=1E3)\n",
+    "#<Your code here>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM is a more powerful classifier than logistic regression. Try to achieve a better accuracy by playing with the algorithm parameters. Report the final values in a new markdown cell below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, in a newly added markdown cell briefly explain how do you understand the difference between the logistic regression and SVM learning algorithms. Pay a special attention to how these algorithms treat a decision boundary. "
    ]
   },
   {
