--- a/cats_lab.ipynb
+++ b/cats_lab.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "### 1.1. Import all the required libraries. \n",
-    "If you get an import error on `keras`, run one of the next 2 cells to Install `keras` in the current Jupyter kernel, and then rerun the import cell. "
+    "If you get an import error on `keras`, run one of the next 2 cells to install `keras` in the current Jupyter kernel, and then rerun the import cell. "
    ]
   },
   {
